# imi

./: .gitignore  .mcp.json  AUDIT-IMI-FORJADO-24abr.md  CHANGELOG-v2-positional.md  CHANGELOG.md  HANDOFF-next-session.md  HANDOFF-timeseries-checkpointer.md  IMI_NotebookLM.ipynb  README.md  demo.cast  docker-compose.yml  imi_boot_semantic.py  imi_memory.db-shm  imi_memory.db-wal  imi_memory.graph.json  imi_shim.py  mkdocs.yml  modal_experiments.py  pyproject.toml
.aiox/: IMI-ROADMAP-2026.md
.claude/: settings.local.json
bench/: SNAPSHOT-INFO-20260524.md  baseline-v3.json  extract_baseline.py
demo/: app.py  requirements.txt  terminal_demo.py
docs/: INSIGHTS-ptbr.md  INSIGHTS.md  PERSPECTIVAS.md  RELEASE-v0.2.0-draft.md  analise-estrategica-profunda.md  analise-pratica.md  concurrency-model.md  cxg-adaptive-rw-connection.md  paper-draft.md  sessao-completa.md
docs-site/: api-reference.md  index.md
examples/: demo_100_100.py  demo_1_99.py  demo_20_80.py  demo_5_95.py  demo_notebook.ipynb
experiments/: beir_comparison.py  p1_adaptive_rw.py  p2_causal_detection.py  p3_paper_figures.py  ws2_full_vs_liteb_benchmark.py  ws3_validation_framework.py  ws4_imi_vs_rag_reranker.py  ws4_threshold_analysis.py  ws_a_ablation_study.py  ws_b_temporal_decay.py  ws_c_hipporag_comparison.py  ws_cortex_comparison.py  ws_cortex_scale_benchmark.py  ws_d_agent_memory_benchmark.py  ws_g_graph_augmented_retrieval.py  ws_i_expanded_benchmark.py
imi/: __init__.py  adaptive.py  affect.py  affordance.py  anchors.py  api.py  cache.py  canary.py  causal.py  completion.py  core.py  dialect.py  embedder.py  events.py  graph.py  hmem_retrieve.py  hmem_shadow.py  intent_index.py  lite.py  llm.py  maintain.py  mcp_server.py  memory_worth.py  migrate.py  multiagent.py  node.py  observe.py  positional.py  reconsolidate.py  search.py  space.py  spatial.py  storage.py  store.py  surprise.py  symbiont_bridge.py  tda.py  temporal.py  tiering.py  viewer.py
scripts/: activate.sh  calibrate_completion_threshold.py  hmem_passo7.py  hmem_rollout_daily.sh  imi_dream_daemon.sh  migrate_occurred_at.py  notebooklm_upload.mjs  run_tests_bg.sh
tests/: test_api.py  test_benchmark.py  test_canary.py  test_dialect.py  test_e2e_pipeline.py  test_embedder.py  test_fcm_bridge.py  test_graph_adaptive.py  test_hmem_promotion.py  test_hmem_retrieve.py  test_hmem_schema.py  test_intent_index.py  test_intent_rail.py  test_langchain.py  test_lite.py  test_mcp_server.py  test_positional.py  test_remaining_benchmarks.py  test_storage.py  test_tiering.py  (+1 more)
(+53 files in other folders)
